--- a/weather.html
+++ b/weather.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/aes.js"></script>
   <script src="js/Extention.js"></script>
+  <!-- axios kullanabilmek için bu paketi eklemen gerekiyor -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
