--- a/weather.html
+++ b/weather.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/aes.js"></script>
-  <script src="js/Extention.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="aes.js"></script>
+  <script src="Extention.js"></script>
   <!-- axios kullanabilmek için bu paketi eklemen gerekiyor -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
